[package]
name = "rustOS"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = {version = "0.9.18", features = ["map_physical_memory"]}
volatile = "0.2.3"
spin = "0.5"
x86_64 = "0.15.0"
uart_16550 = "0.2.0"
pic8259 = "0.10.0"
pc-keyboard = "0.5.0"



[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"

[dependencies.lazy_static]
version = "1.4"
features= ["spin_no_std"]

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial", "stdio", 
    "-display", "none"
]

test-timeout = 300

test-success-exit-code = 33         # (0x10 << 1) | 1

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false